--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://Tesonis.github.io/PortfolioReact",
+  "homepage": "http://Tesonis.github.io/resume",
   "dependencies": {
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
@@ -13,9 +13,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "eject": "react-scripts eject"
+    
   },
   "devDependencies": {
     "gh-pages": "^2.0.1"
